<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">
    
    <ImageView
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="16dp"
        android:src="@drawable/foto"
        android:scaleType="fitCenter"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutName"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hintName"
        app:errorEnabled="true"
        app:counterEnabled="true"
        app:counterMaxLength="40"
        app:endIconMode="clear_text">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutPhone"
        style="@style/Widget.Material3.TextInputLayout.FilledBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hintPhone"
        android:inputType="phone"
        app:endIconMode="clear_text"
        app:boxBackgroundColor="@color/my_light_primary_variant">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gender"
        android:layout_marginTop="16dp"
        style="@style/BlackText"/>

    <RadioGroup
        android:id="@+id/radioGroupGender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checkedButton="@+id/radioButton1">

        <RadioButton
            android:id="@+id/radioButton1"
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:text="@string/male"/>

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:text="@string/female"/>

    </RadioGroup>

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/switchGetNotifications"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/getNotifications"
        android:checked="true"
        style="@style/BlackText"/>

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/checkboxAboutAutorization"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/aboutAutorization"
        app:checkedState="checked"
        style="@style/MyCheckBoxStyle"/>

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/checkboxAboutNews"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/aboutNews"
        app:checkedState="checked"
        style="@style/MyCheckBoxStyle"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/scoresText"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            style="@style/BlackText"/>

        <TextView
            android:id="@+id/textViewProgress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            style="@style/GrayText"
            tools:text="44/100"/>

    </LinearLayout>

    <com.google.android.material.progressindicator.LinearProgressIndicator
        android:id="@+id/progress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:progress="44"/>

    <Button
        android:id="@+id/buttonSave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/save"
        android:enabled="false"/>

</LinearLayout>